tests/suite/fail/generated/types/fail_div_string_string.ny
fn main() {
    let _ = "a" / "a" //~ ERROR Type mismatch in arithmetic
}
